# pipecat-quickstart

./: Dockerfile  README.md  bot.py  env.example  images.py  index.html  kill_process.py  pcc-deploy.toml  pipecat.toml  prompts.py  pyproject.toml  videos.py
