[project]
name = "pipecat-quickstart"
version = "0.1.0"
description = "Quickstart example for building voice AI bots with Pipecat"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai-cli",
    "python-dotenv>=1.2.1",
    "google-generativeai>=0.8.6",
    "google-genai>=1.57.0",
    "pipecat-ai[daily,google,silero]==0.0.101",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
